--- a/projeto/backend/.env.example
+++ b/projeto/backend/.env.example
@@ -2,5 +2,6 @@ APP_PORT=3333
 # Databases
 DB_HOST="localhost"
 DB_NAME="thousand-sunny"
-POSTGRES_USER="postgres"
+POSTGRES_PORT=5432
 POSTGRES_PASS="postgres"
+POSTGRES_USER="postgres"
