Projeto: encriptação das senhas dos clientes

--- a/projeto/backend/.env.example
+++ b/projeto/backend/.env.example
@@ -1,7 +1,10 @@
 APP_PORT=3333
+SECRET_HASH=""
 # Databases
 DB_HOST="localhost"
 DB_NAME="thousand-sunny"
 POSTGRES_PORT=5432
 POSTGRES_PASS="postgres"
 POSTGRES_USER="postgres"
+# Drivers
+HASH_PROVIDER="bcrypt"
