--- a/projeto/backend/package.json
+++ b/projeto/backend/package.json
@@ -20,6 +20,7 @@
 		"@nestjs/core": "^9.3.12",
 		"@nestjs/platform-fastify": "^9.3.10",
 		"@nestjs/swagger": "^6.3.0",
+		"bcrypt": "^5.1.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"date-fns": "^2.30.0",
@@ -32,6 +33,7 @@
 		"@nestjs/schematics": "^9.1.0",
 		"@nestjs/testing": "^9.3.12",
 		"@shared/eslint-config-eslint": "workspace:^",
+		"@types/bcrypt": "^5.0.0",
 		"@types/jest": "^29.4.4",
 		"@types/multer": "^1.4.7",
 		"@types/multer-s3": "^3.0.0",
