--- a/projeto/frontend/package.json
+++ b/projeto/frontend/package.json
@@ -12,6 +12,7 @@
 		"@types/node": "20.2.6",
 		"@types/react": "18.2.11",
 		"@types/react-dom": "18.2.4",
+		"babel-plugin-styled-components": "^2.1.3",
 		"eslint": "8.42.0",
 		"eslint-config-next": "13.4.4",
 		"next": "13.4.4",
